[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.7.18",
    "folium>=0.20.0",
    "geemap>=0.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "streamlit>=1.55.0",
    "streamlit-folium==0.18.0",
    "xarray>=2026.2.0",
    "xee>=0.0.24",
]
